--- a/public/partials/store-detail.html
+++ b/public/partials/store-detail.html
@@ -27,7 +27,40 @@
                 <button type="button" ng-click="toggleEdit()">BACK</button>
             </div>
 
-            <div class="row store_detail" ng-if="!editMode">
+            <!-- Add Fruit -->
+            <div class="table-responsive" ng-if="addMode">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Type</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addFruitObj.type"></td>
+                    </tr>
+                    <tr>
+                        <td>Season</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addFruitObj.season"></td>
+                    </tr>
+                    <tr>
+                        <td>Unit</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addFruitObj.unit"></td>
+                    </tr>
+                    <tr>
+                        <td>Quantity</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addFruitObj.quantity"></td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addFruitObj.price"></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-primary btn-block"  ng-click="addNewFruit()">SUBMIT</button>
+                <button type="button" ng-click="toggleAdd()">BACK</button>
+            </div>
+
+            <div class="row store_detail" ng-if="!editMode && !addMode">
                 <label class="store_det_name">{{storeDetail.name}}</label>
                 <button type="button" ng-click="toggleEdit()">EDIT</button><br/>
                 <div class="col-lg-12">
@@ -63,6 +96,7 @@
                     </div>
                 </div>
 
+                <a data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Product</a>
                 <div class="col-lg-12 row">
                     <div class="col-lg-8 row store_products_panel">
                         <label>Products</label><br/>
