--- a/public/partials/stores.html
+++ b/public/partials/stores.html
@@ -4,6 +4,7 @@
 
         <div class="container-fluid">
 
+
             <!-- Page Heading -->
             <div class="row">
                 <div class="col-lg-12">
@@ -18,57 +19,98 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-red">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-xs-3">
-                                    <i class="fa fa-home fa-5x"></i>
-                                </div>
-                                <div class="col-xs-9 text-right">
-                                    <div class="huge">{{storesList.length}}</div>
-                                    <div>Stores</div>
+            <!-- Add store -->
+            <div class="table-responsive" ng-if="addMode">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Store ID</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.storeId"></td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.name"></td>
+                    </tr>
+                    <tr>
+                        <td>Street</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.address.street"></td>
+                    </tr>
+                    <tr>
+                        <td>City</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.address.city"></td>
+                    </tr>
+                    <tr>
+                        <td>Province</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.address.province"></td>
+                    </tr>
+                    <tr>
+                        <td>Postal Code</td>
+                        <td><input type="text" class="form-control" ng-init="" ng-model="addStoreObj.address.postalcode"></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-primary btn-block"  ng-click="addNewStore()">SUBMIT</button>
+                <button type="button" ng-click="toggleAdd()">BACK</button>
+            </div>
+
+
+            <div class="panel-body" ng-if="!addMode">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="panel panel-red">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-home fa-5x"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-right">
+                                        <div class="huge">{{storesList.length}}</div>
+                                        <div>Stores</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+                <!-- /.row -->
 
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-red">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Stores List</h3>
-                        </div>
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover table-striped">
-                                <thead>
-                                <tr>
-                                    <th>No.</th>
-                                    <th>Picture</th>
-                                    <th>Name</th>
-                                    <th>ID</th>
-                                    <th>Address</th>
-                                    <th>Rating</th>
-                                    <th ng-if="isAdmin == true"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="store in storesList track by $index">
-                                    <td>{{$index+1}}</td>
-                                    <td class="store_page_thumb" ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
-                                    <td>{{store.name}}</td>
-                                    <td>{{store.storeId}}</td>
-                                    <td>{{store.address.street}}, {{store.address.city}}, {{store.address.province}}, {{store.address.postalcode}}</td>
-                                    <td>{{store.rateValue / store.rateCount | number : 0}}</td>
-                                    <td ng-if="isAdmin == true"><button ng-click="deleteThisStore(store.storeId)">DELETE</button></td>
-                                </tr>
-                                </tbody>
-                            </table>
+                <a data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Store</a>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-red">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Stores List</h3>
+                            </div>
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>No.</th>
+                                        <th>Picture</th>
+                                        <th>Name</th>
+                                        <th>ID</th>
+                                        <th>Address</th>
+                                        <th>Rating</th>
+                                        <th ng-if="isAdmin == true"></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr ng-repeat="store in storesList track by $index">
+                                        <td>{{$index+1}}</td>
+                                        <td class="store_page_thumb" ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
+                                        <td>{{store.name}}</td>
+                                        <td>{{store.storeId}}</td>
+                                        <td>{{store.address.street}}, {{store.address.city}}, {{store.address.province}}, {{store.address.postalcode}}</td>
+                                        <td>{{store.rateValue / store.rateCount | number : 0}}</td>
+                                        <td ng-if="isAdmin == true"><button ng-click="deleteThisStore(store.storeId)">DELETE</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
